# cornell_box

./: .gitignore  Cargo.toml  README.md  encode_video.sh
assets/: cornell1.ron  cornell2.ron
src/: main.rs  primitive.rs  scene.rs
src/renderer/: mod.rs  raygen.rs
