[package]
name = "lab2"
version = "0.1.0"
authors = ["Zhixing Zhang <me@neoto.xin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.6"
serde = "1"
rayon = "1.5"

[dependencies.glam]
version = "0.12.0"
features = ["serde"]

[dependencies.image]
version = "0.23"
features = ["tiff"]
